// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="surface.text.normal.lowContrast"
    font-family="text"
    font-size="200"
    font-style="normal"
    font-weight="bold"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "large" 1`] = `
.c0 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.75rem;
  margin: 0;
  padding: 0;
}

<div>
  <h4
    class="c0"
    color="surface.text.subdued.lowContrast"
    font-family="text"
    font-size="400"
    font-style="normal"
    font-weight="regular"
  >
    Get Started With Payment Gateway
  </h4>
</div>
`;

exports[`<Heading /> should render Heading with size "medium" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.125rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.75rem;
  margin: 0;
  padding: 0;
}

<div>
  <h5
    class="c0"
    color="surface.text.muted.lowContrast"
    font-family="text"
    font-size="300"
    font-style="normal"
    font-weight="regular"
  >
    Get Started With Payment Gateway
  </h5>
</div>
`;

exports[`<Heading /> should render Heading with size "small" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="surface.text.normal.lowContrast"
    font-family="text"
    font-size="200"
    font-style="normal"
    font-weight="regular"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "small" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="surface.text.normal.highContrast"
    font-family="text"
    font-size="200"
    font-style="normal"
    font-weight="regular"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with variant "subheading" and weight "bold" 1`] = `
.c0 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="surface.text.subdued.lowContrast"
    font-family="text"
    font-size="75"
    font-style="normal"
    font-weight="bold"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;
